--- a/public_html/TallerAngular1/src/modules/user/userTemplates.html
+++ b/public_html/TallerAngular1/src/modules/user/userTemplates.html
@@ -26,9 +26,8 @@ and open the template in the editor.
             </p>
         </div>
         </div>
-      
         <input type="submit" value="Guardar" class='btn btn-primary'/>
-        <input type="reset" value="Cancelar" class='btn btn-default'/>
+        <input type="reset" value="Cancelar" class='btn btn-default' ng-click="userCtrl.clear()"/>
     </form>
 </div>
 
