--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,14 +9,21 @@ and open the template in the editor.
         <title>Talleres Desarrollo de SW</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style/style.css" />
     </head>
     <body>
         <h1>Talleres de Desarrollo de SW</h1>
         <h2>Juan Sebastian Martinez</h2>
         <h3>201125846</h3>
-        <ul>
-            <li><a href="TallerJavaScript/javascript.html">Taller de JavaScript</a></li>
-            <li><a href="TallerAngular1/angular1.html">Taller de Angular 1</a></li>
-        </ul>
+        <table>
+            <tr>
+            <td><a href="TallerJavaScript/javascript.html"><button>Taller de JavaScript</button></a></td>
+            </tr>
+            <tr>
+            <td><a href="TallerAngular1/angular1.html"><button>Taller 1 de Angular</button></a></td>
+            </tr>
+        </table>
+
+        
     </body>
 </html>
