--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,6 +22,9 @@ and open the template in the editor.
             <tr>
             <td><a href="TallerAngular1/angular1.html"><button>Taller 1 de Angular</button></a></td>
             </tr>
+            <tr>
+                <td><a href="TallerRestangular/index.html"><button>Taller Restangular</button></a></td>
+            </tr>
         </table>
 
         
